Added commented out normalization layers.

--- a/pad_caffenet.ipynb
+++ b/pad_caffenet.ipynb
@@ -262,6 +262,7 @@
     "max_pooling_layer_1 = max_pooling(input_data=conv_layer1,size=mx_pooling_size,window=mx_pooling_window)\n",
     "\n",
     "#need to normalize here\n",
+    "#norm1 = tf.nn.lrn(max_pooling_layer_1, 4, bias=1.0, alpha=0.001 / 9.0, beta=0.75, name='norm1')\n",
     "\n",
     "#Layer 2\n",
     "conv_layer2, conv_W2, conv_B2 =convolution(input_data=max_pooling_layer_1,num_channels=num_filters1,\n",
@@ -271,6 +272,7 @@
     "max_pooling_layer_2 = max_pooling(input_data=conv_layer2,size=mx_pooling_size,window=mx_pooling_window)\n",
     "\n",
     "#need to normalize here\n",
+    "#norm2 = tf.nn.lrn(max_pooling_layer_2, 4, bias=1.0, alpha=0.001 / 9.0, beta=0.75, name='norm2')\n",
     "\n",
     "#Layer 3\n",
     "conv_layer3, conv_W3, conv_B3 =convolution(input_data=max_pooling_layer_2,num_channels=num_filters2,\n",
