Added drug names in text file.

--- a/pad_caffenet.ipynb
+++ b/pad_caffenet.ipynb
@@ -1294,7 +1294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1302,7 +1302,8 @@
      "output_type": "stream",
      "text": [
       "INFO:tensorflow:Restoring parameters from tmp/caffenet_pad_1.ckpt\n",
-      "1\n"
+      "1 Acetaminophen 1 12\n",
+      "Drug Acetaminophen image 12 \u001b[1mCORRECTLY\u001b[0m identified as subject Acetaminophen\n"
      ]
     }
    ],
@@ -1327,23 +1328,31 @@
     "        #return result (add 1 as indexed from 1 not 0)\n",
     "        return result[0], prob_array\n",
     "\n",
-    "    \n",
+    "\n",
+    "#pick an image, subject 1 to 39 and image 1 to 10, let's throw randoms to choose\n",
+    "test_drug = random.randint(1,classes)\n",
+    "test_image = random.randint(1,100)\n",
+    "\n",
     "#location of image.\n",
     "image_name = '1.37.png'\n",
     "\n",
     "#Load png file using the PIL library\n",
-    "im = PIL.Image.open(join('images', image_name))\n",
+    "im = PIL.Image.open(join('images', str(test_drug) + '.' + str(test_image) + '.png'))\n",
     "\n",
     "#catagorize\n",
     "predicted_drug, predicted_prob = identify(im)\n",
     "\n",
-    "print(predicted_drug)\n",
+    "#load drug names\n",
+    "f = open('drug_names.txt')\n",
+    "firstline = f.readline()\n",
+    "drugs = firstline.split(',')\n",
+    "#print(predicted_drug,drugs[predicted_drug], test_drug, test_image)\n",
     "\n",
     "#and print\n",
-    "#if predicted_subject == labels[test_index][test_image]:\n",
-    "#    print(\"Subject\",label_names[labels[test_index][test_image]].decode(\"utf-8\"), \"\\033[1mCORRECTLY\\033[0m identified as subject\", label_names[predicted_subject].decode(\"utf-8\"))\n",
-    "#else:\n",
-    "#    print(\"Subject\",label_names[labels[test_index][test_image]].decode(\"utf-8\"), \"\\033[1mINCORRECTLY\\033[0m identified as subject\", label_names[predicted_subject].decode(\"utf-8\"))    "
+    "if predicted_drug == test_drug:\n",
+    "    print(\"Drug\",drugs[test_drug], \"image\", test_image, \"\\033[1mCORRECTLY\\033[0m identified as drug\", drugs[predicted_drug])\n",
+    "else:\n",
+    "    print(\"Drug\",drugs[test_drug], \"image\", test_image, \"\\033[1mINCORRECTLY\\033[0m identified as drug\", drugs[predicted_drug])  \n"
    ]
   },
   {
