Added layer4 and 5 names to saved variables.

--- a/pad_caffenet.ipynb
+++ b/pad_caffenet.ipynb
@@ -314,7 +314,7 @@
     "accuracy = tf.reduce_mean(tf.cast(tf.equal(pred, Y_classes), tf.float32))\n",
     "\n",
     "# Add ops to save and restore all the variables.\n",
-    "saver = tf.train.Saver(tf.global_variables ()) #{'conv_W1': conv_W1,'conv_B1': conv_B1,'conv_W2': conv_W2,'conv_B2': conv_B2,'conv_W3': conv_W3,'conv_B3': conv_B3,'fc_W1': fc_W1,'fc_B1': fc_B1,'fc_W2': fc_W2,'fc_B2': fc_B2,'fc_W3': fc_W3,'fc_B3': fc_B3}) #tf.global_variables ())\n",
+    "saver = tf.train.Saver({'conv_W1': conv_W1,'conv_B1': conv_B1,'conv_W2': conv_W2,'conv_B2': conv_B2,'conv_W3': conv_W3,'conv_B3': conv_B3,'conv_W4': conv_W4,'conv_B4': conv_B4,'conv_W5': conv_W5,'conv_B5': conv_B5,'fc_W1': fc_W1,'fc_B1': fc_B1,'fc_W2': fc_W2,'fc_B2': fc_B2,'fc_W3': fc_W3,'fc_B3': fc_B3}) #tf.global_variables ())\n",
     "print(max_pooling_layer_5.shape, features)"
    ]
   },
@@ -1358,7 +1358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -2181,7 +2181,7 @@
     "        lane.append(img.crop((53*i, 0, 53*(i+1), 490)))\n",
     "\n",
     "#reconstruct\n",
-    "imgout = Image.new(\"RGB\", (53 * len(lane),490))\n",
+    "imgout = Image.new(\"RGB\", (53 * len(lane), 490))\n",
     "\n",
     "#loop over lanes\n",
     "for i in range(0,len(lane)):\n",
