3D plots from file output from website marking.

--- a/3D_plot.ipynb
+++ b/3D_plot.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -818,23 +818,49 @@
    ],
    "source": [
     "#input data\n",
+    "filename = \"prediction_results.csv\"\n",
     "\n",
-    "drug_size = 10\n",
+    "#read file\n",
+    "pred_file = open(filename, \"r\")\n",
+    "pred_lines = pred_file.readlines()\n",
+    "\n",
+    "#size\n",
+    "drug_size = int(pred_lines[0].split(',')[0].strip()) #10\n",
     "\n",
     "#drugs\n",
-    "drugs = ['Paracetamol Starch', 'Penicillin Procaine', 'Starch', 'Lactose', 'Amoxicillin', 'Cellulose', 'Vitamin C', 'Quinine', 'Benzyl Penicillin', 'Paracetamol' ]\n",
+    "drugs = [] #['Paracetamol Starch', 'Penicillin Procaine', 'Starch', 'Lactose', 'Amoxicillin', 'Cellulose', 'Vitamin C', 'Quinine', 'Benzyl Penicillin', 'Paracetamol' ]\n",
+    "\n",
+    "drug_list = pred_lines[3].split(',')\n",
+    "\n",
+    "#loop over drugs and add\n",
+    "for drug in drug_list:\n",
+    "    drugs.append(drug.strip())\n",
     "\n",
     "#grab output from training\n",
-    "m=np.array([[11.0, 0.0, 3.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0],\\\n",
-    "            [0.0, 42.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0],\\\n",
-    "            [1.0, 0.0, 36.0, 3.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0],\\\n",
-    "            [0.0, 0.0, 1.0, 29.0, 1.0, 20.0, 0.0, 0.0, 1.0, 2.0],\\\n",
-    "            [0.0, 0.0, 0.0, 1.0, 54.0, 1.0, 0.0, 0.0, 0.0, 0.0],\\\n",
-    "            [0.0, 1.0, 0.0, 11.0, 1.0, 17.0, 1.0, 0.0, 0.0, 1.0],\\\n",
-    "            [0.0, 0.0, 0.0, 1.0, 1.0, 0.0, 98.0, 0.0, 0.0, 2.0],\\\n",
-    "            [0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 40.0, 0.0, 2.0],\\\n",
-    "            [0.0, 1.0, 0.0, 2.0, 0.0, 2.0, 0.0, 0.0, 35.0, 0.0],\\\n",
-    "            [0.0, 0.0, 0.0, 4.0, 0.0, 3.0, 0.0, 5.0, 0.0, 54.0]])\n",
+    "#matrix\n",
+    "m = np.empty([drug_size, drug_size])\n",
+    "#loop over rows\n",
+    "for i in range(0, drug_size):\n",
+    "    #split row\n",
+    "    m_line = pred_lines[4 + i].split(',')\n",
+    "    #set elements\n",
+    "    for j in range(0, len(m_line)):\n",
+    "        try:\n",
+    "            fl = float(m_line[j].strip())\n",
+    "            m[i,j] = f #float(m_line[j].strip())\n",
+    "        except:\n",
+    "            continue\n",
+    "\n",
+    "# m=np.array([[11.0, 0.0, 3.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0],\\\n",
+    "#             [0.0, 42.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0],\\\n",
+    "#             [1.0, 0.0, 36.0, 3.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0],\\\n",
+    "#             [0.0, 0.0, 1.0, 29.0, 1.0, 20.0, 0.0, 0.0, 1.0, 2.0],\\\n",
+    "#             [0.0, 0.0, 0.0, 1.0, 54.0, 1.0, 0.0, 0.0, 0.0, 0.0],\\\n",
+    "#             [0.0, 1.0, 0.0, 11.0, 1.0, 17.0, 1.0, 0.0, 0.0, 1.0],\\\n",
+    "#             [0.0, 0.0, 0.0, 1.0, 1.0, 0.0, 98.0, 0.0, 0.0, 2.0],\\\n",
+    "#             [0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 40.0, 0.0, 2.0],\\\n",
+    "#             [0.0, 1.0, 0.0, 2.0, 0.0, 2.0, 0.0, 0.0, 35.0, 0.0],\\\n",
+    "#             [0.0, 0.0, 0.0, 4.0, 0.0, 3.0, 0.0, 5.0, 0.0, 54.0]])\n",
     "\n",
     "# setup the figure and axes\n",
     "fig = plt.figure(figsize=(12, 5))\n",
