Added new pythoin version of plot, tidied save image on jupyter nb.

--- a/3D_plot.ipynb
+++ b/3D_plot.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -143,17 +143,18 @@
     "\n",
     "# A canvas must be manually attached to the figure\n",
     "canvas = FigureCanvasAgg(fig)\n",
+    "fig.savefig(\"img.png\")\n",
     "\n",
-    "# draw the canvas\n",
-    "canvas.draw()\n",
+    "# # draw the canvas\n",
+    "# canvas.draw()\n",
     "\n",
-    "s, (width, height) = canvas.print_to_buffer()\n",
+    "# s, (width, height) = canvas.print_to_buffer()\n",
     "\n",
-    "#convert to image\n",
-    "im = Image.frombytes(\"RGBA\", (width, height), s)\n",
+    "# #convert to image\n",
+    "# im = Image.frombytes(\"RGBA\", (width, height), s)\n",
     "\n",
-    "im.save(\"img.png\")\n",
-    "im.show()\n"
+    "# im.save(\"img.png\")\n",
+    "#im.show()\n"
    ]
   },
   {
