Updated code to remove differences in working copies.

--- a/pad_caffenet.ipynb
+++ b/pad_caffenet.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,15 +38,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train size (1930, 154587) (1930, 10)\n",
+      "Test size (763, 154587) (763, 10)\n"
+     ]
+    }
+   ],
    "source": [
     "#lookup, output 0-8\n",
-    "lookup = [0, 1, 2, 3, 4, 3, 5, 6, 7, 8]\n",
+    "lookup = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
     "\n",
     "#variables\n",
-    "classes = 9 #Amoxicillin rerun,Acetaminophen,Ciprofloxacin,Ceftriaxone,Metformin,Ampicillin,Azithromycin,Cefuroxime Axetil,Levofloxacin\n",
+    "classes = 10 #Amoxicillin rerun,Acetaminophen,Ciprofloxacin,Ceftriaxone,Metformin,Ampicillin,Azithromycin,Cefuroxime Axetil,Levofloxacin\n",
     "\n",
     "#Flags to create train and test variables first time through\n",
     "firstTrain = True\n",
@@ -128,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +145,7 @@
     "#learning rate is the step size that we move in the opposite direction of the gradient for each weight/bias\n",
     "learning_rate = 1e-4 \n",
     "#an epoch represents having trained with a number of images equal to the training test size\n",
-    "max_epochs = 400\n",
+    "max_epochs = 50\n",
     "display_step_size = 10 # Number of iterations before checking on the performance of network (validation)\n",
     "#the prob_keep parameter represents the dropout, probability to keep units. This makes the network more robust\n",
     "prob_keep = 0.5\n",
@@ -178,8 +187,8 @@
     "channels = 3\n",
     "\n",
     "#location of the weights/biases and architecture for the CNN checkpoint\n",
-    "model_checkpoint = \"tmp/caffenet_pad_msh_tanzania_9b.ckpt\"\n",
-    "model_checkpoint_out = \"tmp/caffenet_pad_msh_tanzania_9b.ckpt\"\n",
+    "model_checkpoint = \"tmp/caffenet_pad_msh_tanzania_all3.ckpt\"\n",
+    "model_checkpoint_out = \"tmp/caffenet_pad_msh_tanzania_all3.ckpt\"\n",
     "\n",
     "#image batch size\n",
     "image_batch_size = 128"
@@ -313,8 +322,8 @@
     "accuracy = tf.reduce_mean(tf.cast(tf.equal(pred, Y_classes), tf.float32))\n",
     "\n",
     "# Add ops to save and restore all the variables.\n",
-    "saver = tf.train.Saver({'conv_W1': conv_W1,'conv_B1': conv_B1,'conv_W2': conv_W2,'conv_B2': conv_B2,'conv_W3': conv_W3,'conv_B3': conv_B3,'conv_W4': conv_W4,'conv_B4': conv_B4,'conv_W5': conv_W5,'conv_B5': conv_B5,'fc_W1': fc_W1,'fc_B1': fc_B1,'fc_W2': fc_W2,'fc_B2': fc_B2,'fc_W3': fc_W3,'fc_B3': fc_B3}) #tf.global_variables ())\n",
-    "#saver = tf.train.Saver(tf.global_variables ())\n",
+    "#saver = tf.train.Saver({'conv_W1': conv_W1,'conv_B1': conv_B1,'conv_W2': conv_W2,'conv_B2': conv_B2,'conv_W3': conv_W3,'conv_B3': conv_B3,'conv_W4': conv_W4,'conv_B4': conv_B4,'conv_W5': conv_W5,'conv_B5': conv_B5,'fc_W1': fc_W1,'fc_B1': fc_B1,'fc_W2': fc_W2,'fc_B2': fc_B2,'fc_W3': fc_W3,'fc_B3': fc_B3}) #tf.global_variables ())\n",
+    "saver = tf.train.Saver()#tf.global_variables ())\n",
     "print(max_pooling_layer_5.shape, features)"
    ]
   },
@@ -429,6 +438,7 @@
     "        epoch +=1 #next epoch\n",
     "\n",
     "    # Save the variables to disk.\n",
+    "    #new_saver = tf.train.Saver()\n",
     "    save_path = saver.save(sess, model_checkpoint_out)\n",
     "    print(\"Model saved in file: %s\" % save_path)\n",
     "\n",
@@ -497,6 +507,8 @@
     "    image = np.mat(np.asarray(image).flatten())\n",
     "    #create session\n",
     "    with tf.Session() as sess:\n",
+    "        new_saver = tf.train.import_meta_graph(model_checkpoint+'.meta')\n",
+    "        new_saver.restore(sess, model_checkpoint)#tf.train.latest_checkpoint('./'))\n",
     "        #load in the saved weights\n",
     "        saver.restore(sess, model_for_identification)\n",
     "        #find the prediction\n",
@@ -584,17 +596,19 @@
    "outputs": [],
    "source": [
     "#reverse lookup, output 0-8\n",
-    "r_lookup = [0, 1, 2, 3, 4, 6, 7, 8, 9]\n",
+    "r_lookup = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
     "\n",
     "\n",
     "#location of the weights/biases and architecture for the CNN (saved above)\n",
-    "model_for_identification = model_checkpoint\n",
+    "#model_for_identification = model_checkpoint\n",
     "\n",
     "#create session\n",
     "sess = tf.Session()\n",
     "\n",
     "#load in the saved weights\n",
-    "saver.restore(sess, model_for_identification)\n",
+    "new_saver = tf.train.import_meta_graph('tmp/caffenet_pad_msh_tanzania_9a.ckpt.meta')\n",
+    "new_saver.restore(sess, tf.train.latest_checkpoint('tmp/./'))\n",
+    "#saver.restore(sess, model_for_identification)\n",
     "\n",
     "#called to identify subject in image\n",
     "def identify(image):\n",
