Tidied training to roll up understanding of stored graphs.

--- a/pad_caffenet.ipynb
+++ b/pad_caffenet.ipynb
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
     "#learning rate is the step size that we move in the opposite direction of the gradient for each weight/bias\n",
     "learning_rate = 1e-4 \n",
     "#an epoch represents having trained with a number of images equal to the training test size\n",
-    "max_epochs = 50\n",
+    "max_epochs = 100\n",
     "display_step_size = 10 # Number of iterations before checking on the performance of network (validation)\n",
     "#the prob_keep parameter represents the dropout, probability to keep units. This makes the network more robust\n",
     "prob_keep = 0.5\n",
@@ -187,8 +187,7 @@
     "channels = 3\n",
     "\n",
     "#location of the weights/biases and architecture for the CNN checkpoint\n",
-    "model_checkpoint = \"tmp/caffenet_pad_msh_tanzania_all3.ckpt\"\n",
-    "model_checkpoint_out = \"tmp/caffenet_pad_msh_tanzania_all3.ckpt\"\n",
+    "model_checkpoint = \"tf_ckpnt/msh_tanzania_caffenet_pad_1.ckpt\"\n",
     "\n",
     "#image batch size\n",
     "image_batch_size = 128"
@@ -196,9 +195,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(?, 8, 8, 256) 16384\n"
+     ]
+    }
+   ],
    "source": [
     "# Define CNN\n",
     "#create place holders, these will be loaded with data as we train\n",
@@ -208,7 +215,7 @@
     "Y_classes = tf.argmax(Y, axis=1)                               #the classes(subjects)\n",
     "\n",
     "#dropout (keep probability)\n",
-    "keep_prob = tf.placeholder(tf.float32)\n",
+    "keep_prob = tf.placeholder(tf.float32, name='keep_prob')\n",
     "\n",
     "#initial weight values\n",
     "def generate_weights(shape, name):\n",
@@ -322,8 +329,8 @@
     "accuracy = tf.reduce_mean(tf.cast(tf.equal(pred, Y_classes), tf.float32))\n",
     "\n",
     "# Add ops to save and restore all the variables.\n",
-    "#saver = tf.train.Saver({'conv_W1': conv_W1,'conv_B1': conv_B1,'conv_W2': conv_W2,'conv_B2': conv_B2,'conv_W3': conv_W3,'conv_B3': conv_B3,'conv_W4': conv_W4,'conv_B4': conv_B4,'conv_W5': conv_W5,'conv_B5': conv_B5,'fc_W1': fc_W1,'fc_B1': fc_B1,'fc_W2': fc_W2,'fc_B2': fc_B2,'fc_W3': fc_W3,'fc_B3': fc_B3}) #tf.global_variables ())\n",
-    "saver = tf.train.Saver()#tf.global_variables ())\n",
+    "saver = tf.train.Saver({'conv_W1': conv_W1,'conv_B1': conv_B1,'conv_W2': conv_W2,'conv_B2': conv_B2,'conv_W3': conv_W3,'conv_B3': conv_B3,'conv_W4': conv_W4,'conv_B4': conv_B4,'conv_W5': conv_W5,'conv_B5': conv_B5,'fc_W1': fc_W1,'fc_B1': fc_B1,'fc_W2': fc_W2,'fc_B2': fc_B2,'fc_W3': fc_W3,'fc_B3': fc_B3}) #tf.global_variables ())\n",
+    "#saver = tf.train.Saver()#tf.global_variables ())\n",
     "print(max_pooling_layer_5.shape, features)"
    ]
   },
@@ -434,16 +441,15 @@
     "\n",
     "            print (\"Epoch: {0:>3}, Training Loss:{1:>6.8f}, Training Accuracy:{2:>6.1%}, Test loss: {3:>6.8f},\" \\\n",
     "                  \"Test accuracy: {4:>6.1%}\".format(epoch, train_loss, train_acc, tst_loss,test_acc))\n",
+    "            \n",
+    "            # Save the variables to disk.\n",
+    "            save_path = saver.save(sess, model_checkpoint)\n",
+    "            print(\"Model saved in file: %s\" % save_path)\n",
     "\n",
     "        epoch +=1 #next epoch\n",
     "\n",
-    "    # Save the variables to disk.\n",
-    "    #new_saver = tf.train.Saver()\n",
-    "    save_path = saver.save(sess, model_checkpoint_out)\n",
-    "    print(\"Model saved in file: %s\" % save_path)\n",
-    "\n",
-    "    #and the graph\n",
-    "    tf.train.write_graph(sess.graph_def, \"tmp/load\", \"convnet_cifar10.pb\", True)\n",
+    "    #and the graph (saved by saver)\n",
+    "    #tf.train.write_graph(sess.graph_def, \"tmp/load\", \"convnet_cifar10.pb\", True)\n",
     "\n",
     "    #print that training ended\n",
     "    print ('Optimisation done. Accuracy attained on test data:{0:.2f}'.format(max(test_accurracy)))"
