Reverted prediction to orig checkpoint.

--- a/prediction.ipynb
+++ b/prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,24 +30,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:Restoring parameters from tmp2/caffenet_pad_1.ckpt\n",
-      "Drug Levofloxacin\n",
-      " image 74 \u001b[1mCORRECTLY\u001b[0m identified as drug Levofloxacin\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#location of the weights/biases and architecture for the CNN (saved above)\n",
-    "model_for_identification = \"tmp2/caffenet_pad_1.ckpt\"\n",
-    "classes = 9\n",
+    "model_for_identification = \"tmp/caffenet_pad_msh_tanzania.ckpt\"\n",
+    "classes = 10\n",
     "#keep_prob = tf.placeholder(tf.float32)\n",
     "\n",
     "\n",
@@ -59,21 +48,21 @@
     "    with tf.Session() as sess:\n",
     "        #load in the saved weights\n",
     "        saver = tf.train.import_meta_graph(model_for_identification+'.meta')\n",
-    "        saver.restore(sess, tf.train.latest_checkpoint('tmp2/'))\n",
+    "        saver.restore(sess, model_for_identification)#tf.train.latest_checkpoint('tmp2/'))\n",
     "        \n",
     "        #get graph to extract tensors\n",
     "        graph = tf.get_default_graph()\n",
     "        pred = graph.get_tensor_by_name(\"pred:0\")\n",
     "        output = graph.get_tensor_by_name(\"output:0\")\n",
     "        X = graph.get_tensor_by_name(\"X:0\")\n",
-    "        Placeholder = graph.get_tensor_by_name(\"Placeholder:0\")\n",
+    "        keep_prob = graph.get_tensor_by_name(\"keep_prob:0\")\n",
     "\n",
     "        #saver.restore(sess, model_for_identification)\n",
     "        \n",
     "        #find the prediction\n",
-    "        result = sess.run(pred, feed_dict={X: image, Placeholder: 1.})\n",
+    "        result = sess.run(pred, feed_dict={X: image, keep_prob: 1.})\n",
     "        #we can look at the softmax output as well\n",
-    "        prob_array = sess.run(output, feed_dict={X: image, Placeholder: 1.})\n",
+    "        prob_array = sess.run(output, feed_dict={X: image, keep_prob: 1.})\n",
     "        #print(\"op\",prob_array)\n",
     "        \n",
     "        #return result (add 1 as indexed from 1 not 0)\n",
@@ -84,10 +73,10 @@
     "test_image = 74#random.randint(1,100)\n",
     "\n",
     "#location of image.\n",
-    "image_name = '1.37.png'\n",
+    "image_name = 'msh_tanzania_data/test/4_31915.png'\n",
     "\n",
     "#Load png file using the PIL library\n",
-    "im = PIL.Image.open(join('images', str(test_drug) + '.' + str(test_image) + '.png'))\n",
+    "im = PIL.Image.open(image_name)#join('images', str(test_drug) + '.' + str(test_image) + '.png'))\n",
     "\n",
     "#catagorize\n",
     "predicted_drug, predicted_prob = identify(im)\n",
@@ -96,13 +85,13 @@
     "f = open('drug_names.txt')\n",
     "firstline = f.readline()\n",
     "drugs = firstline.split(',')\n",
-    "#print(predicted_drug,drugs[predicted_drug], test_drug, test_image)\n",
+    "print(predicted_drug,drugs[predicted_drug], test_drug, test_image)\n",
     "\n",
-    "#and print\n",
-    "if predicted_drug == test_drug:\n",
-    "    print(\"Drug\",drugs[test_drug], \"image\", test_image, \"\\033[1mCORRECTLY\\033[0m identified as drug\", drugs[predicted_drug])\n",
-    "else:\n",
-    "    print(\"Drug\",drugs[test_drug], \"image\", test_image, \"\\033[1mINCORRECTLY\\033[0m identified as drug\", drugs[predicted_drug])  \n",
+    "# #and print\n",
+    "# if predicted_drug == test_drug:\n",
+    "#     print(\"Drug\",drugs[test_drug], \"image\", test_image, \"\\033[1mCORRECTLY\\033[0m identified as drug\", drugs[predicted_drug])\n",
+    "# else:\n",
+    "#     print(\"Drug\",drugs[test_drug], \"image\", test_image, \"\\033[1mINCORRECTLY\\033[0m identified as drug\", drugs[predicted_drug])  \n",
     "\n"
    ]
   },
