Updates to 100 image 9 drug data set training.

--- a/pad_caffenet_orig_9_100.ipynb
+++ b/pad_caffenet_orig_9_100.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,8 +174,7 @@
     "channels = 3\n",
     "\n",
     "#location of the weights/biases and architecture for the CNN checkpoint\n",
-    "model_checkpoint = \"tmp2/caffenet_pad_1.ckpt\"\n",
-    "model_checkpoint_out = \"tmp2/caffenet_pad_1.ckpt\"\n",
+    "model_checkpoint = \"tf_ckpt/caffenet_pad_1.ckpt\"\n",
     "\n",
     "#image batch size\n",
     "image_batch_size = 128"
@@ -195,7 +194,7 @@
     "Y_classes = tf.argmax(Y, axis=1)                               #the classes(subjects)\n",
     "\n",
     "#dropout (keep probability)\n",
-    "keep_prob = tf.placeholder(tf.float32)\n",
+    "keep_prob = tf.placeholder(tf.float32, name='keep_prob')\n",
     "\n",
     "#initial weight values\n",
     "def generate_weights(shape, name):\n",
@@ -309,10 +308,9 @@
     "accuracy = tf.reduce_mean(tf.cast(tf.equal(pred, Y_classes), tf.float32))\n",
     "\n",
     "# Add ops to save and restore all the variables.\n",
-    "#saver = tf.train.Saver([conv_W1,conv_B1,conv_W2,conv_B2,conv_W3,conv_B3,conv_W4,conv_B4,conv_W5,conv_B5,fc_W1,fc_B1,fc_W2,fc_B2,fc_W3,fc_B3,FC3]) #tf.global_variables ())\n",
-    "saver = tf.train.Saver(tf.global_variables ())\n",
-    "\n",
+    "saver = tf.train.Saver([conv_W1,conv_B1,conv_W2,conv_B2,conv_W3,conv_B3,conv_W4,conv_B4,conv_W5,conv_B5,fc_W1,fc_B1,fc_W2,fc_B2,fc_W3,fc_B3]) #tf.global_variables ())\n",
     "#saver = tf.train.Saver(tf.global_variables ())\n",
+    "\n",
     "print(max_pooling_layer_5.shape, features)"
    ]
   },
@@ -423,16 +421,15 @@
     "\n",
     "            print (\"Epoch: {0:>3}, Training Loss:{1:>6.8f}, Training Accuracy:{2:>6.1%}, Test loss: {3:>6.8f},\" \\\n",
     "                  \"Test accuracy: {4:>6.1%}\".format(epoch, train_loss, train_acc, tst_loss,test_acc))\n",
+    "            \n",
+    "            # Save the variables to disk.\n",
+    "            save_path = saver.save(sess, model_checkpoint)\n",
+    "            print(\"Model saved in file: %s\" % save_path)\n",
     "\n",
     "        epoch +=1 #next epoch\n",
     "\n",
-    "    # Save the variables to disk.\n",
-    "    #saver_out = tf.train.Saver()\n",
-    "    save_path = saver.save(sess, model_checkpoint_out)\n",
-    "    print(\"Model saved in file: %s\" % save_path)\n",
-    "\n",
     "    #and the graph\n",
-    "    tf.train.write_graph(sess.graph_def, \"tmp/load\", \"convnet_cifar10.pb\", True)\n",
+    "    #tf.train.write_graph(sess.graph_def, \"tmp/load\", \"convnet_cifar10.pb\", True)\n",
     "\n",
     "    #print that training ended\n",
     "    print ('Optimisation done. Accuracy attained on test data:{0:.2f}'.format(max(test_accurracy)))"
@@ -644,26 +641,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:Restoring parameters from tmp2/caffenet_pad_1.ckpt\n",
-      "Drug Levofloxacin\n",
-      " image 74 \u001b[1mCORRECTLY\u001b[0m identified as drug Levofloxacin\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#location of the weights/biases and architecture for the CNN (saved above)\n",
-    "model_for_identification = \"tmp2/caffenet_pad_1.ckpt\"\n",
+    "model_for_identification = model_checkpoint\n",
     "classes = 9\n",
-    "#keep_prob = tf.placeholder(tf.float32)\n",
-    "\n",
     "\n",
     "#called to identify subject in image\n",
     "def identify(image):\n",
@@ -673,7 +657,7 @@
     "    with tf.Session() as sess:\n",
     "        #load in the saved weights\n",
     "        saver = tf.train.import_meta_graph(model_for_identification+'.meta')\n",
-    "        saver.restore(sess, tf.train.latest_checkpoint('tmp2/'))\n",
+    "        saver.restore(sess, model_for_identification) #tf.train.latest_checkpoint('tmp2/'))\n",
     "        \n",
     "        #get graph to extract tensors\n",
     "        graph = tf.get_default_graph()\n",
@@ -743,7 +727,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
