Updated original test set to have csv files ordered label, drug for compatibilty with later code.

--- a/pad_caffenet_orig_9_100.ipynb
+++ b/pad_caffenet_orig_9_100.ipynb
@@ -53,14 +53,14 @@
     "firstTest = True\n",
     "\n",
     "#load training images\n",
-    "with open('images/train/label.txt') as f:\n",
+    "with open('images/train/label.csv') as f:\n",
     "    #get lines\n",
     "    train_labels = f.readlines()\n",
     "    \n",
     "    #loop over label lines\n",
     "    for labels in train_labels:\n",
     "        #get filename/label\n",
-    "        file, label_lookup  = labels.split(' ')\n",
+    "        label_lookup, file = labels.split(',')\n",
     "        \n",
     "        #lookup\n",
     "        label = lookup[int(label_lookup)]\n",
@@ -86,14 +86,14 @@
     "            trainLabel = np.append(trainLabel, np.mat(np.eye(classes)[int(label)]), axis=0)\n",
     "\n",
     "#load testing images\n",
-    "with open('images/test/label.txt') as f:\n",
+    "with open('images/test/label.csv') as f:\n",
     "    #get lines\n",
     "    test_labels = f.readlines()\n",
     "    \n",
     "    #loop over label lines\n",
     "    for labels in test_labels:\n",
     "        #get filename/label\n",
-    "        file, label_lookup = labels.split(' ')\n",
+    "        label_lookup, file = labels.split(',')\n",
     "        \n",
     "        #lookup\n",
     "        label = lookup[int(label_lookup)]\n",
